feat: Add support for switching scheduler